--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
+    "framer-motion": "^11.0.16",
     "graphql-request": "^6.1.0",
     "next": "14.1.3",
     "react": "^18",
